# lifeos-plugin

./: .env.local.age  .envrc  .envrc.age  .gitignore  .gitmodules  .mcp copy.json  .mcp.json  .mcp.json.example  AGENTS.md  BL_README.MD  CLAUDE.MD  CLAUDE.md  CLERK_CONVEX_INSTRUCTION.MD  DOCKER_CLAUDE_CRED.md  My_DREAMS.md  README.md  nohup.out  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.claude-plugin/: plugin.json
.claude/commands/: client-brief.md  client-health.md  contact-lookup.md  context-switch.md  daily-standup.md  end-of-day.md  follow-ups.md  inbox-triage.md  meeting-prep.md  monthly-review.md  overdue.md  relationship-pulse.md  sprint-plan.md  voice-notes-crystallize.md  voice-notes.md  weekly-review.md
.devcontainer/: .gitignore  Dockerfile  README.md  devcontainer.json  generate-mounts.sh  restore-claude-auth.sh  setup.sh
.github/workflows/: agent-farm-build-agent.yaml  agent-farm-build-controlplane.yaml  agent-farm-deploy-infra.yaml  agent-farm-publish-capacitor-bundle.yaml  build-agent.yaml  build-controlplane.yaml  coder-task.yml  controlplane-deploy.yml  deploy-convex-staging.yml  deploy-dev.yml  deploy-staging.yml  deploy-tanstack-dev.yml  deploy-tanstack-prod.yml  deploy-tanstack-staging.yml  deploy-tauri-lifeosapp-dev.yml  deploy-tauri-lifeosapp-prod.yml  deploy-tauri-lifeosapp-staging.yml  dokploy-preview-sync.yml  lifeos-mcp-publish-npm.yml  lifeos-publish-ota-bundle.yml  ota-release-dev.yml  preview-deploy.yml
.tmp/: clerk.browser.5.119.0.js
agent/: Dockerfile
agent/scripts/: entrypoint.sh
ai_notes/: ai-agent-tools-guide.md  claude_instructions_AI_agent_code_DRY.md  clerk-capacitor-prod-oauth-issue.md  coder-web-delegation-plan.md
apps/hola-rnapp/: app.json  package.json
apps/holaai-rnapp/: .env.age  .env.local.age  .env.staging.age  .gitignore  CLAUDE.md  README.md  package.json  tsconfig.json
apps/holaai-tanstack-web/: .env.example.age  (+4 more)
apps/lifeos/lifeos-macbarapp/: README.md  prd.md  pyproject.toml  run.sh
apps/lifeos/lifeos-macbarapp/src/tubevault/: __init__.py  config.py  convex_sync.py  main.py  settings_ui.py  youtube_scraper.py
apps/lifeos/taurireact-macapp/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.dev-production.conf.json  tauri.dev-staging.conf.json  tauri.production.conf.json  tauri.staging.conf.json
apps/lifeos/taurireact-macapp/src-tauri/capabilities/: default.json
apps/lifeos/taurireact-macapp/src-tauri/icons/: icon.icns
apps/lifeos/taurireact-macapp/src-tauri/icons-production/: icon.icns
apps/lifeos/taurireact-macapp/src-tauri/icons-staging/: icon.icns
apps/lifeos/taurireact-macapp/src-tauri/src/: TRASH-FILES.md  api_keys.rs  app_category.rs  beeper.rs  claudecode.rs  coder.rs  empower.rs  granola.rs  lib.rs  livekit.rs  main.rs  notes.rs  screentime.rs  voicememos.rs  youtube.rs
apps/lifeos/taurireact-macapp/src-tauri/src/council_server/: handlers.rs  mod.rs  persistence.rs  server.rs  state.rs  types.rs  websocket.rs
config/: llm-council.normal.json
controlplane/: Dockerfile  controlplane.db  go.mod  go.sum
scripts/: README.md  convex-sync-to-prod.sh  deploy-prod-isolated.sh  deploy-prod.sh  env-decrypt.sh  env-encrypt.sh  env-setup.sh  env-verify.sh  get-user-id.ts  npm-safe-publish.sh  run-llm-council.mjs
src/: cli.ts  index.ts
ztasks/: 00.convexlaravelstyle.md  04.improveux.md  05.IDEATE-CC-DOCKER-WEB.md  REFACTOR_IDEAS.MD  improved_claudemd.md
(+955 files in other folders)
