[project]
name = "tubevault"
version = "0.1.0"
description = "macOS menu bar app to sync YouTube playlist transcripts to Convex"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clerk-backend-api>=4.1.3",
    "convex>=0.7.0",
    "yt-dlp>=2025.12.8",
]

[project.scripts]
tubevault = "tubevault.main:main"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tubevault"]
