[package]
name = "taurireact-macapp"
version = "0.1.0"
description = "LifeOS Nexus - Personal life operating system"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "taurireact_macapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
tauri-plugin-oauth = "2"
tauri-plugin-clerk = "0.1"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
gethostname = "0.5"
regex = "1"
rand = "0.8"
chrono = "0.4"
cron = "0.12"
yt-transcript-rs = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
plist = "1"
lazy_static = "1.4"

# Council Server (HTTP + WebSocket)
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-util = "0.3"
once_cell = "1.18"
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
jsonwebtoken = "9.0"
tauri-plugin-macos-permissions = "2"

